--- a/censusData.ipynb
+++ b/censusData.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.8.5 ('base')' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: 'conda install -n base ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -27,7 +30,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.6.9 ('equitableCSR.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -46,7 +49,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "a616d9921b7aaefe669bb0cb9e8e3f1d92a5dd515a2dd6984a3cdd0de6f88a02"
    }
   }
  },
