--- a/utils/dataVisualizaton.ipynb
+++ b/utils/dataVisualizaton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,257 @@
     "import io\n",
     "import osmnx as ox"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationDF = pd.read_csv(\"../data/data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fuel Type Code</th>\n",
+       "      <th>Station Name</th>\n",
+       "      <th>Street Address</th>\n",
+       "      <th>Intersection Directions</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>ZIP</th>\n",
+       "      <th>Plus4</th>\n",
+       "      <th>Station Phone</th>\n",
+       "      <th>Status Code</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EV Pricing (French)</th>\n",
+       "      <th>LPG Nozzle Types</th>\n",
+       "      <th>Hydrogen Pressures</th>\n",
+       "      <th>Hydrogen Standards</th>\n",
+       "      <th>CNG Fill Type Code</th>\n",
+       "      <th>CNG PSI</th>\n",
+       "      <th>CNG Vehicle Class</th>\n",
+       "      <th>LNG Vehicle Class</th>\n",
+       "      <th>EV On-Site Renewable Source</th>\n",
+       "      <th>Restricted Access</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ELEC</td>\n",
+       "      <td>UMN WASHINGTON RAMP</td>\n",
+       "      <td>511 Washington Ave SE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Minneapolis</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>55455</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>888-758-4389</td>\n",
+       "      <td>E</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ELEC</td>\n",
+       "      <td>UMN 21ST AVE. RAM</td>\n",
+       "      <td>400 21st Ave S</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Minneapolis</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>55455</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>888-758-4389</td>\n",
+       "      <td>E</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 65 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Fuel Type Code         Station Name         Street Address  \\\n",
+       "0           ELEC  UMN WASHINGTON RAMP  511 Washington Ave SE   \n",
+       "1           ELEC    UMN 21ST AVE. RAM         400 21st Ave S   \n",
+       "\n",
+       "   Intersection Directions         City State    ZIP  Plus4 Station Phone  \\\n",
+       "0                      NaN  Minneapolis    MN  55455    NaN  888-758-4389   \n",
+       "1                      NaN  Minneapolis    MN  55455    NaN  888-758-4389   \n",
+       "\n",
+       "  Status Code  ...  EV Pricing (French) LPG Nozzle Types Hydrogen Pressures  \\\n",
+       "0           E  ...                  NaN              NaN                NaN   \n",
+       "1           E  ...                  NaN              NaN                NaN   \n",
+       "\n",
+       "   Hydrogen Standards  CNG Fill Type Code  CNG PSI  CNG Vehicle Class  \\\n",
+       "0                 NaN                 NaN      NaN                NaN   \n",
+       "1                 NaN                 NaN      NaN                NaN   \n",
+       "\n",
+       "   LNG Vehicle Class  EV On-Site Renewable Source  Restricted Access  \n",
+       "0                NaN                          NaN              False  \n",
+       "1                NaN                          NaN              False  \n",
+       "\n",
+       "[2 rows x 65 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stationDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pointList = [[1,2], [3,4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'zip' object has no attribute 'tolist'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/project/yang7492/research/equitableCSR/utils/dataVisualizaton.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bcs-maximus.cs.umn.edu/project/yang7492/research/equitableCSR/utils/dataVisualizaton.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m a,b \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39;49m(\u001b[39m*\u001b[39;49mpointList)\u001b[39m.\u001b[39;49mtolist()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'zip' object has no attribute 'tolist'"
+     ]
+    }
+   ],
+   "source": [
+    "a,b = zip(*pointList).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
