refactor the plot functions

--- a/censusData.ipynb
+++ b/censusData.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils.dataloader import DataLoader\n",
-    "from utils.osmGraph import GraphFromHmlFile\n",
+    "from utils.osmGraph import GraphFromHmlFile, GraphFromPlace\n",
     "import os\n",
     "import pandas as pd\n",
     "import io\n",
@@ -16,32 +16,41 @@
     "import requests\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
-    "import plotly\n"
+    "import plotly\n",
+    "import osmnx as ox\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFolder = \"./data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "109283\n"
+      "967835\n"
      ]
     }
    ],
    "source": [
-    "dataFolder = \"./data\"\n",
-    "graphFileName = \"hennepinCounty.graphml\"\n",
+    "graphFileName = \"minnesota.graphml\"\n",
     "graph = GraphFromHmlFile(os.path.join(dataFolder, graphFileName))\n",
     "print(len(graph.edgesGdf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +200,7 @@
        "max             16.000000         12.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +229,7 @@
        "Int64Index([36, 52, 76, 77, 80, 81, 105, 188], dtype='int64')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +267,7 @@
        " (44.979167, -93.228946)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +529,7 @@
        "max    2.717397e+11  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +674,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +705,7 @@
        "[(44.9719823, -93.2334415), (44.9778291, -93.2342296)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,18 +725,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "figureFolder = \"./results\"\n",
     "figureName = \"test.html\"\n",
-    "graph.plotData(positionDict, ['green', 'red'] ,os.path.join(figureFolder,figureName))"
+    "graph.plotPointList(positionDict, ['green', 'red'] ,os.path.join(figureFolder,figureName))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +760,7 @@
        "  142.71768466725018])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +782,7 @@
        "([246710361, 34177358], [62.441805227521264, 73.49242906040053])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +836,7 @@
        "  373.82899999999995]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +867,7 @@
        " 320363001]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,151 +878,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[44.9724653, -93.2338464],\n",
-       " [44.972458, -93.2345925],\n",
-       " [44.9724115, -93.2346998],\n",
-       " [44.9723859, -93.2348491],\n",
-       " [44.9723902, -93.2353495],\n",
-       " [44.9723948, -93.2359434],\n",
-       " [44.9724257, -93.236043],\n",
-       " [44.9724811, -93.2361005],\n",
-       " [44.9724811, -93.2361005],\n",
-       " [44.9726636, -93.2361744],\n",
-       " [44.972678, -93.2361802],\n",
-       " [44.9727526, -93.2362262],\n",
-       " [44.9727755, -93.2362503],\n",
-       " [44.9727961, -93.2362718],\n",
-       " [44.9728286, -93.2363417],\n",
-       " [44.9728475, -93.2364038],\n",
-       " [44.9728475, -93.2364038],\n",
-       " [44.9728436, -93.2365236],\n",
-       " [44.9728295, -93.2366957],\n",
-       " [44.9728295, -93.2366957],\n",
-       " [44.9728097, -93.2367804],\n",
-       " [44.9728017, -93.236863],\n",
-       " [44.9727885, -93.2377713],\n",
-       " [44.9727864, -93.2379178],\n",
-       " [44.9727864, -93.2379178],\n",
-       " [44.9726789, -93.2379031],\n",
-       " [44.9726613, -93.2379007],\n",
-       " [44.9726441, -93.2378984],\n",
-       " [44.9724745, -93.2378513],\n",
-       " [44.9722075, -93.2377546],\n",
-       " [44.9720807, -93.2376868],\n",
-       " [44.9720276, -93.2376584],\n",
-       " [44.9720276, -93.2376584],\n",
-       " [44.971973, -93.2376373],\n",
-       " [44.9719641, -93.2376339],\n",
-       " [44.9719061, -93.2376116],\n",
-       " [44.9717904, -93.2375082],\n",
-       " [44.9716694, -93.2373727],\n",
-       " [44.9715533, -93.2371828],\n",
-       " [44.9714864, -93.2370386],\n",
-       " [44.9714231, -93.2368449],\n",
-       " [44.9713852, -93.2367085],\n",
-       " [44.9713594, -93.2365688],\n",
-       " [44.9713409, -93.2364501],\n",
-       " [44.9713104, -93.2361335],\n",
-       " [44.9713046, -93.2360547],\n",
-       " [44.9712977, -93.2359535],\n",
-       " [44.9712646, -93.2356299],\n",
-       " [44.97125, -93.2355619],\n",
-       " [44.9712305, -93.2354934],\n",
-       " [44.9712181, -93.2354269],\n",
-       " [44.9712141, -93.235374],\n",
-       " [44.9712168, -93.2353251],\n",
-       " [44.9712246, -93.2352355],\n",
-       " [44.9712392, -93.2351582],\n",
-       " [44.9712589, -93.2350198],\n",
-       " [44.9712575, -93.2349572],\n",
-       " [44.9712446, -93.2348692],\n",
-       " [44.9712098, -93.2347208],\n",
-       " [44.9711966, -93.2345565],\n",
-       " [44.9711966, -93.2345565],\n",
-       " [44.971164, -93.2344369],\n",
-       " [44.9711316, -93.2343181],\n",
-       " [44.9710905, -93.2341536],\n",
-       " [44.9710134, -93.2338542],\n",
-       " [44.9709527, -93.2336053],\n",
-       " [44.9708919, -93.2333564],\n",
-       " [44.9708572, -93.2331974],\n",
-       " [44.9708342, -93.2330922],\n",
-       " [44.9707882, -93.2328422],\n",
-       " [44.9707568, -93.2325466],\n",
-       " [44.9707386, -93.2322796],\n",
-       " [44.9707341, -93.2319745],\n",
-       " [44.9706855, -93.2316312],\n",
-       " [44.9706126, -93.2312793],\n",
-       " [44.9705098, -93.2308726],\n",
-       " [44.9704783, -93.2307571],\n",
-       " [44.9704151, -93.2305218],\n",
-       " [44.9703616, -93.2303634],\n",
-       " [44.9703616, -93.2303634],\n",
-       " [44.9704128, -93.2303286],\n",
-       " [44.9704519, -93.2303077],\n",
-       " [44.9704813, -93.2302988],\n",
-       " [44.9705163, -93.2302912],\n",
-       " [44.9705733, -93.2302838],\n",
-       " [44.9710582, -93.2302847],\n",
-       " [44.9714984, -93.2302935],\n",
-       " [44.9715758, -93.2302954],\n",
-       " [44.9718584, -93.230293],\n",
-       " [44.9721432, -93.2302917],\n",
-       " [44.9722339, -93.2302932],\n",
-       " [44.972297, -93.2302924],\n",
-       " [44.9724794, -93.2302858],\n",
-       " [44.9725356, -93.2302845],\n",
-       " [44.9725356, -93.2302845],\n",
-       " [44.9726179, -93.2302859],\n",
-       " [44.9728549, -93.2302899],\n",
-       " [44.9731869, -93.2302954],\n",
-       " [44.9733015, -93.2303],\n",
-       " [44.9735591, -93.2302929],\n",
-       " [44.9736051, -93.230295],\n",
-       " [44.9736339, -93.2302982],\n",
-       " [44.9736865, -93.2303011],\n",
-       " [44.9737337, -93.2303038],\n",
-       " [44.9737574, -93.230305],\n",
-       " [44.9738112, -93.2303097],\n",
-       " [44.9738835, -93.2303148],\n",
-       " [44.9740365, -93.2303218],\n",
-       " [44.9741564, -93.2303205],\n",
-       " [44.9745182, -93.2303166],\n",
-       " [44.9746858, -93.2303184],\n",
-       " [44.9747717, -93.2303193],\n",
-       " [44.9747717, -93.2303193],\n",
-       " [44.9747739, -93.2304756],\n",
-       " [44.974778, -93.2310523],\n",
-       " [44.9747785, -93.2311749],\n",
-       " [44.97478, -93.2317625],\n",
-       " [44.974779, -93.2318923],\n",
-       " [44.974779, -93.2318923],\n",
-       " [44.9740863, -93.231882]]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.nodeList2GPSTraj(pathList[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "figureName = \"testPath.html\"\n",
     "graph.plotTrajList([graph.nodeList2GPSTraj(pathList[0])], os.path.join(figureFolder,figureName))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figureName = \"pointAndTraj.html\"\n",
+    "graph.plotTrajAndPoint([graph.nodeList2GPSTraj(pathList[0])], positionDict, ['green', 'red'] ,os.path.join(figureFolder,figureName))"
    ]
   },
   {
