fix bugs in ploting trajAndPoint

--- a/censusData.ipynb
+++ b/censusData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "967835\n"
+      "23773\n"
      ]
     }
    ],
    "source": [
-    "graphFileName = \"minnesota.graphml\"\n",
+    "#graphFileName = \"minnesota.graphml\"\n",
+    "graphFileName = \"minneapolis.graphml\"\n",
     "graph = GraphFromHmlFile(os.path.join(dataFolder, graphFileName))\n",
     "print(len(graph.edgesGdf))"
    ]
@@ -727,7 +728,15 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n"
+     ]
+    }
+   ],
    "source": [
     "figureFolder = \"./results\"\n",
     "figureName = \"test.html\"\n",
@@ -888,9 +897,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "green\n",
+      "green\n",
+      "red\n",
+      "red\n"
+     ]
+    }
+   ],
    "source": [
     "figureName = \"pointAndTraj.html\"\n",
     "graph.plotTrajAndPoint([graph.nodeList2GPSTraj(pathList[0])], positionDict, ['green', 'red'] ,os.path.join(figureFolder,figureName))"
