An example new station deployment

--- a/censusData.ipynb
+++ b/censusData.ipynb
@@ -1477,7 +1477,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stationNodeList.append(186298215)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1487,25 +1496,33 @@
        "  27751.668000000012,\n",
        "  21355.72300000001,\n",
        "  10217.878999999999,\n",
-       "  20667.34900000001],\n",
+       "  20667.34900000001,\n",
+       "  2710.653,\n",
+       "  476.493],\n",
        " 5603290650: [23299.662999999993,\n",
        "  30107.646000000004,\n",
        "  23711.700999999997,\n",
        "  6883.620000000003,\n",
-       "  23023.326999999997],\n",
+       "  23023.326999999997,\n",
+       "  4668.557999999999,\n",
+       "  6902.717999999999],\n",
        " 9569913070: [22397.770999999993,\n",
        "  26696.554999999986,\n",
        "  22809.809000000005,\n",
        "  6249.419999999999,\n",
-       "  22121.435],\n",
+       "  22121.435,\n",
+       "  3596.468,\n",
+       "  5584.351000000001],\n",
        " 186253453: [22194.87999999999,\n",
        "  23899.778999999984,\n",
        "  23735.787,\n",
        "  9951.639000000001,\n",
-       "  23047.413]}"
+       "  23047.413,\n",
+       "  7510.748000000002,\n",
+       "  8443.154000000002]}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,6 +1590,148 @@
     "figureName = \"columbus.html\"\n",
     "positionDict = {\"station\": stationPositionList, \"census block group\": censusBlockList}\n",
     "graph.plotPointList(positionDict, ['green', 'red'] ,os.path.join(figureFolder,figureName))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y</th>\n",
+       "      <th>x</th>\n",
+       "      <th>street_count</th>\n",
+       "      <th>highway</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>osmid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>158775549</th>\n",
+       "      <td>43.500085</td>\n",
+       "      <td>-92.692754</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-92.69275 43.50008)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160498917</th>\n",
+       "      <td>43.499865</td>\n",
+       "      <td>-92.878523</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-92.87852 43.49987)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160498975</th>\n",
+       "      <td>43.499763</td>\n",
+       "      <td>-92.979487</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-92.97949 43.49976)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160499711</th>\n",
+       "      <td>43.499920</td>\n",
+       "      <td>-92.858607</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-92.85861 43.49992)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160499721</th>\n",
+       "      <td>43.499943</td>\n",
+       "      <td>-92.828628</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>POINT (-92.82863 43.49994)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   y          x  street_count highway  ref  \\\n",
+       "osmid                                                        \n",
+       "158775549  43.500085 -92.692754             3     NaN  NaN   \n",
+       "160498917  43.499865 -92.878523             3     NaN  NaN   \n",
+       "160498975  43.499763 -92.979487             3     NaN  NaN   \n",
+       "160499711  43.499920 -92.858607             3     NaN  NaN   \n",
+       "160499721  43.499943 -92.828628             3     NaN  NaN   \n",
+       "\n",
+       "                             geometry  \n",
+       "osmid                                  \n",
+       "158775549  POINT (-92.69275 43.50008)  \n",
+       "160498917  POINT (-92.87852 43.49987)  \n",
+       "160498975  POINT (-92.97949 43.49976)  \n",
+       "160499711  POINT (-92.85861 43.49992)  \n",
+       "160499721  POINT (-92.82863 43.49994)  "
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.nodesGdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "figureFolder = \"./results\"\n",
+    "figureName = \"newStation.html\"\n",
+    "newStationxs, newStationys = graph.nodesGdf.loc[186298215, 'geometry'].xy\n",
+    "positionDict = {\"station\": stationPositionList, \"census block group\": censusBlockList, \"New station\": [[newStationys[0], newStationxs[0]]]}\n",
+    "graph.plotPointList(positionDict, ['green', 'red', 'blue'] ,os.path.join(figureFolder,figureName))"
    ]
   },
   {
